# acore_bot

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  1  AGENTS.md  ARCHITECTURE_RESTRUCTURE.md  CLAUDE.md  CONTRIBUTING.md  DEPLOY.md  FEATURES.md  FEATURE_ROADMAP.md  IMPLEMENTATION_STATUS_REPORT.md  IMPROVEMENT_PLAN.md  MANUAL_VERIFICATION_CHECKLIST.md  MENTION_FIX_SUMMARY.md  MENTION_FLOW_DIAGRAM.md  MULTIAGENT_SESSION_COMPLETE.md  MULTIAGENT_SESSION_SUMMARY.md  NEW_FEATURES.md  OPTIMIZATION_COMPLETE.md  PERFORMANCE_TRACKING_SUMMARY.md  PRODUCTION_CONFIG_SUMMARY.md  PRODUCTION_READINESS_FINAL_REPORT.md  PRODUCTION_READINESS_PLAN.md  QUICK_REFERENCE_ADVANCED.md  README.md  REFACTORING_CHECKLIST.md  REFACTORING_PLAN.md  RELEASE_NOTES.md  RVC_CLEANUP.md  SERVICE_QUICKREF.md  T11_IMPLEMENTATION_SUMMARY.md  T5_IMPLEMENTATION_SUMMARY.md  ac_db.py  ac_metrics.py  acore_api_client.py  arliai.py  bot.py  bot_acore.py  (+21 more)
.agent/: T19_T22_implementation_plan.md  TASK_A1_SECURITY_FIX.md  TASK_A2_TYPE_HINTS.md  TASK_A3_CONFIG_VALUES.md  TASK_B1_SCHEMA_UPDATE.md  TASK_B2_MIGRATION_GUIDE.md  TASK_C_PHASE3_ASSESSMENT.md  TASK_D_PRODUCTION_MATERIALS.md  feature_verification_plan.md  multiagent_implementation_plan.md
.sisyphus/: VISION_REALIGNMENT_AUDIT.md  boulder.json
adapters/: AGENTS.md  runtime_factory.py
bot/: __init__.py  cache.py  formatting.py  intent_router.py  llm_guard.py  prompts.py  tool_dispatch.py
cogs/: AGENTS.md  __init__.py  character_commands.py  chat.py  conversation_commands.py  event_listeners.py  help.py  mcp_commands.py  memory_commands.py  music.py  notes.py  profile_commands.py  reminders.py  rl_commands.py  search_commands.py  system.py  trivia.py  voice.py
commands/: __init__.py  health.py  insights.py  kpi.py
config/: __init__.py  agents.py  analytics.py  base.py  discord.py  features.py  llm.py  logging.py  persona.py  rag.py  rl.py  voice.py
core/: AGENTS.md  __init__.py  auth.py  autonomy.py  commands.py  interfaces.py  persona_engine.py  router.py  runtime.py  schemas.py  trace.py  types.py
docs/: ADVANCED_NATURALNESS.md  AGENTS.md  API_REFERENCE.md  ARCHITECTURE.md  BEHAVIOR_CONFIGURATION.md  BOT_CONVERSATIONS.md  BOT_CONVERSATIONS_ARCHITECTURE.md  CLEANUP_SUMMARY.md  CONFIGURATION.md  CRITICAL_FIXES_COMPLETE.md  CRITICAL_FIXES_SUMMARY.md  DASHBOARD_PERFORMANCE_METRICS.md  DEBUG_MODE_METRICS.md  DEPLOYMENT.md  DEVELOPMENT_FLOW.md  ENGINEERING_OPERATING_MODEL.md  ENV_UPDATES.md  FEATURES.md  (+50 more)
(+641 files in other folders)
