[project]
name = "acore-bot"
version = "0.1.0"
description = "Discord bot with Ollama AI chat, TTS, and RVC voice conversion"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiofiles>=23.0.0",
    "aiohttp>=3.9.0",
    "discord-py[voice]>=2.3.0",
    "edge-tts>=6.1.0",
    "librosa>=0.10.0",
    "numpy>=1.24.0",
    "ollama>=0.1.0",
    "pynacl>=1.5.0",
    "python-dotenv>=1.0.0",
    "scipy>=1.11.0",
    "soundfile>=0.12.0",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
]
