[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "acore-bot"
version = "0.1.0"
description = "Discord bot with Ollama AI chat, TTS, and RVC voice conversion"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiofiles>=23.0.0",
    "aiohttp>=3.9.0",
    "ddgs>=9.9.0",
    "discord-py[voice]>=2.3.0",
    "discord-ext-voice-recv>=0.5.0a",
    "faster-whisper>=1.2.1",
    "kokoro-onnx>=0.4.9",
    "librosa>=0.10.0",
    "numpy>=1.24.0",
    "ollama>=0.1.0",
    "psutil>=7.1.3",
    "pynacl>=1.5.0",
    "python-dotenv>=1.0.0",
    "scipy>=1.11.0",
    "soundfile>=0.12.0",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "yt-dlp>=2024.0.0",
    "chromadb>=1.3.5",
    "sentence-transformers>=5.1.2",
    "tiktoken>=0.7.0",
    "Pillow>=10.0.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "websockets>=12.0",
]

[tool.setuptools]
packages = ["cogs", "services", "utils"]

[dependency-groups]
dev = [
    "black>=25.12.0",
    "mypy>=1.19.0",
    "ruff>=0.14.8",
    "types-aiofiles>=25.1.0.20251011",
    "types-psutil>=7.1.3.20251211",
]
